integration_tests/tests/integration_tests/snapshots/integration_tests__account_update_tests__metaplex_core_transfers-76Km81uEfC2paMTJ8e81wYffo6vWrZZZiaqqkLF3ozq9.snap
---
source: integration_tests/tests/integration_tests/account_update_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 0,
  "limit": 1000,
  "items": []
}
